--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "[![Actions Status](https://github.com/Vasmart24/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/Vasmart24/frontend-project-44/actions)",
   "type": "module",
   "bin": {
-    "brain-games": "bin/games/brain-games.js",
-    "brain-even": "bin/games/brain-even.js",
-    "brain-calc": "bin/games/brain-calc.js"
+    "brain-games": "bin/runBrainGames.js",
+    "brain-even": "bin/runBrainEven.js",
+    "brain-calc": "bin/runBrainCalc.js"
   },
   "main": "index.js",
   "scripts": {
