add brainGCD game; update Makefile and package.json for launching new game; fix gameEngine

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": {
     "brain-games": "bin/runBrainGames.js",
     "brain-even": "bin/runBrainEven.js",
-    "brain-calc": "bin/runBrainCalc.js"
+    "brain-calc": "bin/runBrainCalc.js",
+    "brain-GCD": "bin/runBrainGCD.js"
   },
   "main": "index.js",
   "scripts": {
