--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[![Actions Status](https://github.com/Vasmart24/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/Vasmart24/frontend-project-44/actions)",
   "type": "module",
   "bin": {
+    "brain-progression": "bin/runBrainProgression.js",
     "brain-games": "bin/runBrainGames.js",
     "brain-even": "bin/runBrainEven.js",
     "brain-calc": "bin/runBrainCalc.js",
