--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": {
     "brain-progression": "bin/runBrainProgression.js",
     "brain-games": "bin/runBrainGames.js",
-    "brain-Prime": "bin/runBrainPrime.js",
+    "brain-prime": "bin/runBrainPrime.js",
     "brain-even": "bin/runBrainEven.js",
     "brain-calc": "bin/runBrainCalc.js",
     "brain-gcd": "bin/runBrainGCD.js"
